// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`何もレンダリングされないケース 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <a
    href="#"
  />
  
</div>
`;

exports[`文字列を渡すケース 1`] = `
<div
  data-v-app=""
>
  
  <p>
    Vue Test Utils
  </p>
  <a
    href="#"
  />
  
</div>
`;
